--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "next-js-cms",
     "version": "1.0.0",
-    "description": "",
+    "description": "A Next.js demo app",
     "main": "index.js",
     "scripts": {
         "dev": "node server.js",
@@ -13,11 +13,11 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "@zeit/next-css": "^1.0.1",
     "dependencies": {
+        "next": "^8.1.0",
+        "@zeit/next-css": "^1.0.1",
         "express": "^4.17.1",
         "isomorphic-unfetch": "^3.0.0",
-        "next": "^8.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
     }
