--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "description": "A Next.js demo app",
     "main": "index.js",
+    "proxy": "http://localhost:3000",
     "scripts": {
         "dev": "node server.js",
         "build": "next build",
-        "start": "NODE_ENV=production PORT=8000 node server.js",
+        "start": "NODE_ENV=production PORT=3000 node server.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "export": "next export"
     },
@@ -14,10 +15,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "next": "^8.1.0",
         "@zeit/next-css": "^1.0.1",
+        "cookie-parser": "^1.4.4",
         "express": "^4.17.1",
         "isomorphic-unfetch": "^3.0.0",
+        "next": "^8.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
     }
